--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 10:05:02 2018</p>
+         Last Run: Tue Nov 27 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -32,24 +32,24 @@
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>-3</td>
-                        <td>-7</td>
+                        <td>-6</td>
                         <td>5</td>
-                        <td>72</td>
+                        <td>73</td>
                         <td>0</td>
-                        <td>10</td>
-                        <td>W</td>
+                        <td>8</td>
+                        <td>WSW</td>
                         <td>9</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>-3</td>
-                        <td>-7</td>
+                        <td>-6</td>
                         <td>5</td>
-                        <td>74</td>
+                        <td>75</td>
                         <td>0</td>
-                        <td>10</td>
-                        <td>W</td>
+                        <td>8</td>
+                        <td>WSW</td>
                         <td>10</td>
                      </tr>
                      <tr>
@@ -58,11 +58,11 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>5</td>
-                        <td>77</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>W</td>
-                        <td>6</td>
+                        <td>WSW</td>
+                        <td>7</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,8 +89,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-7",
-                 "-7",
+                 "-6",
+                 "-6",
                  "-7"
                ]
              },
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "72",
-                 "74",
-                 "77"
+                 "73",
+                 "75",
+                 "78"
                ]
              },
              {
@@ -184,7 +184,7 @@
                "data":[
                  "9",
                  "10",
-                 "6"
+                 "7"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 10:05:02 2018</p>
+         Last Run: Tue Nov 27 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -249,35 +249,35 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>24</td>
-                        <td>73</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
-                        <td>75</td>
+                        <td>78</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>7</td>
-                        <td>71</td>
+                        <td>6</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
-                        <td>71</td>
+                        <td>74</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>8</td>
-                        <td>71</td>
+                        <td>7</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNE</td>
-                        <td>68</td>
+                        <td>72</td>
                      </tr>
                   </tbody>
                </table>
@@ -376,8 +376,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "24",
-                 "7",
-                 "8"
+                 "6",
+                 "7"
                ]
              },
              {
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "73",
-                 "71",
-                 "71"
+                 "72",
+                 "70",
+                 "70"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "75",
-                 "71",
-                 "68"
+                 "78",
+                 "74",
+                 "72"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 10:05:02 2018</p>
+         Last Run: Tue Nov 27 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -463,7 +463,7 @@
                         <td>Mostly Cloudy</td>
                         <td>-5</td>
                         <td>-8</td>
-                        <td>7</td>
+                        <td>6</td>
                         <td>77</td>
                         <td>0</td>
                         <td>6</td>
@@ -475,11 +475,11 @@
                         <td>Mostly Cloudy</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>7</td>
-                        <td>72</td>
+                        <td>6</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>NNE</td>
+                        <td>NE</td>
                         <td>64</td>
                      </tr>
                      <tr>
@@ -488,11 +488,11 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>5</td>
-                        <td>68</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>NNE</td>
-                        <td>53</td>
+                        <td>NE</td>
+                        <td>55</td>
                      </tr>
                   </tbody>
                </table>
@@ -590,8 +590,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "7",
-                 "7",
+                 "6",
+                 "6",
                  "5"
                ]
              },
@@ -602,8 +602,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "77",
-                 "72",
-                 "68"
+                 "71",
+                 "67"
                ]
              },
              {
@@ -614,7 +614,7 @@
                "data":[
                  "77",
                  "64",
-                 "53"
+                 "55"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 10:05:02 2018</p>
+         Last Run: Tue Nov 27 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -679,23 +679,23 @@
                         <td>-10</td>
                         <td>-14</td>
                         <td>4</td>
-                        <td>72</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>WNW</td>
-                        <td>19</td>
+                        <td>W</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
-                        <td>-11</td>
-                        <td>-16</td>
+                        <td>-10</td>
+                        <td>-14</td>
                         <td>4</td>
                         <td>73</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>17</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -703,11 +703,11 @@
                         <td>-11</td>
                         <td>-16</td>
                         <td>4</td>
-                        <td>75</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>15</td>
+                        <td>13</td>
                      </tr>
                   </tbody>
                </table>
@@ -735,7 +735,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-14",
-                 "-16",
+                 "-14",
                  "-16"
                ]
              },
@@ -747,7 +747,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-10",
-                 "-11",
+                 "-10",
                  "-11"
                ]
              }
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "72",
                  "73",
-                 "75"
+                 "73",
+                 "76"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "19",
-                 "17",
-                 "15"
+                 "18",
+                 "15",
+                 "13"
                ]
              }
            ]
