--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 21:05:02 2018</p>
+         Last Run: Tue Nov 27 22:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -32,13 +32,13 @@
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>-4</td>
-                        <td>-7</td>
+                        <td>-8</td>
                         <td>5</td>
-                        <td>76</td>
+                        <td>79</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>WSW</td>
                         <td>10</td>
+                        <td>WSW</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -46,23 +46,23 @@
                         <td>-5</td>
                         <td>-9</td>
                         <td>5</td>
-                        <td>79</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>18</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-6</td>
                         <td>-10</td>
                         <td>5</td>
-                        <td>83</td>
+                        <td>84</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>32</td>
+                        <td>23</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,7 +89,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-7",
+                 "-8",
                  "-9",
                  "-10"
                ]
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "76",
                  "79",
-                 "83"
+                 "81",
+                 "84"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "10",
-                 "18",
-                 "32"
+                 "9",
+                 "17",
+                 "23"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 21:05:02 2018</p>
+         Last Run: Tue Nov 27 22:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -253,7 +253,7 @@
                         <td>0</td>
                         <td>6</td>
                         <td>N</td>
-                        <td>72</td>
+                        <td>73</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -261,18 +261,18 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>23</td>
-                        <td>73</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
-                        <td>71</td>
+                        <td>72</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>24</td>
+                        <td>23</td>
                         <td>72</td>
                         <td>0</td>
                         <td>8</td>
@@ -377,7 +377,7 @@
                "data":[
                  "24",
                  "23",
-                 "24"
+                 "23"
                ]
              },
              {
@@ -387,7 +387,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "78",
-                 "73",
+                 "74",
                  "72"
                ]
              },
@@ -397,8 +397,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "73",
                  "72",
-                 "71",
                  "71"
                ]
              }
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 21:05:02 2018</p>
+         Last Run: Tue Nov 27 22:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -464,7 +464,7 @@
                         <td>-5</td>
                         <td>-5</td>
                         <td>24</td>
-                        <td>81</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>5</td>
                         <td>ENE</td>
@@ -474,13 +474,13 @@
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>-5</td>
-                        <td>-5</td>
+                        <td>-8</td>
                         <td>24</td>
                         <td>78</td>
                         <td>0</td>
-                        <td>5</td>
+                        <td>6</td>
                         <td>NE</td>
-                        <td>78</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -488,11 +488,11 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>23</td>
-                        <td>73</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>6</td>
                         <td>NE</td>
-                        <td>74</td>
+                        <td>75</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,7 +520,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-5",
-                 "-5",
+                 "-8",
                  "-7"
                ]
              },
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "81",
+                 "82",
                  "78",
-                 "73"
+                 "74"
                ]
              },
              {
@@ -613,8 +613,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "85",
-                 "78",
-                 "74"
+                 "79",
+                 "75"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 21:05:02 2018</p>
+         Last Run: Tue Nov 27 22:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -676,14 +676,14 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-11</td>
-                        <td>-16</td>
+                        <td>-12</td>
+                        <td>-17</td>
                         <td>5</td>
-                        <td>82</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>35</td>
+                        <td>37</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -691,11 +691,11 @@
                         <td>-12</td>
                         <td>-17</td>
                         <td>4</td>
-                        <td>81</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>W</td>
-                        <td>37</td>
+                        <td>WSW</td>
+                        <td>38</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -703,11 +703,11 @@
                         <td>-12</td>
                         <td>-17</td>
                         <td>4</td>
-                        <td>80</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>W</td>
-                        <td>39</td>
+                        <td>WSW</td>
+                        <td>40</td>
                      </tr>
                   </tbody>
                </table>
@@ -734,7 +734,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-16",
+                 "-17",
                  "-17",
                  "-17"
                ]
@@ -746,7 +746,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-11",
+                 "-12",
                  "-12",
                  "-12"
                ]
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "82",
-                 "81",
-                 "80"
+                 "83",
+                 "83",
+                 "82"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "35",
                  "37",
-                 "39"
+                 "38",
+                 "40"
                ]
              }
            ]
